2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.IPhone.addin.xml: Bump MD version.

2009-10-03  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Use the correct path for the icon
	  in Info.plist.

2009-10-02  Michael Hutchinson  <mhutchinson@novell.com>

	* framework_IPhone.xml: Add System.Web.Services.

2009-09-29  Michael Hutchinson  <mhutchinson@novell.com>

	* PropertyList/PlistDictionary.cs: Add a TryGetValue method.

	* MobileProvision.cs: Don't crash on loading if there are no
	  provisioned devices. Don't add files to the list that didn't
	  load correctly.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs:
	* Gui/IPhoneSigningKeyPanel.cs:
	* Gui/IPhoneBuildOptionsPanel.cs: Hide the panels for library
	  projects.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* Templates/IPhoneLibraryProject.xpt.xml: Add MonoTouch
	  library project template.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneViewController.xft.xml: Call the xib-loading
	  base ctor.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* framework_IPhone.xml: Add System.Json.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Fix combo used when listing
	  provisioning profiles.

2009-09-28  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: More careful handling of
	  active provisioning profiles. Add a warning for null uuid.

2009-09-24  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Properly type outlets connected to
	  IBUICustomObjects.

2009-09-23  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: Hide the commands for library compile
	  targets.

2009-09-17  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehindGenerator.cs: Use Xcode's partial class list to